<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnClose"
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="359dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="458dp"
        android:autofillHints=""
        android:ems="15"
        android:gravity="start|top"
        android:hint="@string/hint1"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnsend1"
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="359dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>